# horizon-thermodynamics

./: .gitignore  README.md  index.html  reading_list.md
.claude/: settings.json
code/: README.md  pyproject.toml
code/notebooks/: 00_hawking_spectrum.ipynb
code/src/bh_radiation/: __init__.py  hawking.py
code/tests/: test_hawking.py
learning/: collapse-uv.html  frozen-star.html  hawking-1975-deep.html  hawking-assessment.html  horizon-geometry-arsenal.html  index.html  jacobson-1995-course.html  jacobson-1995.html  muon-detector-build.html  paper-worthiness-and-AI.html  research-craft-course.html  string-theory-course.html  why-horizon-non-affine.html
manuscripts/: README.md
manuscripts/greybody-factors/: README.md  latexmkrc  main.tex
manuscripts/template/: main.tex
notes/: README.md
notes/journal/: 2026-05-22.md
notes/per_paper/: Hawking1975.md  _template.md
notes/topics/: _README.md  grad_school_deep_scan.md  grad_school_round4_additions.md  greybody_literature_scan.md  hawking_1975_reading_guide.md  msc_scholarships.md  msc_scholarships_non_it_de.md  psi_application_strategy.md
papers/: README.md
references/: README.md  library.bib
talks/: README.md
